// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar should render correctly 1`] = `
.c1 {
  display: block;
  width: 100%;
  height: 52px;
  padding: 0 20px;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 18px;
  color: #040d25;
  border-width: 1px;
  border-color: white;
  border-style: solid;
  border-radius: 0.5rem;
  background-color: #EEF2F5;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c1:disabled {
  color: #757679;
  background: #EEF2F5;
  cursor: not-allowed;
}

.c3 {
  height: 20px;
  font-weight: 400;
  font-size: 20px;
  color: #545456;
  cursor: pointer;
}

.c3:hover {
  color: #6d6d70;
}

.c3::before {
  font-family: 'icomoon';
  content: '\\e92d';
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c0 > :first-child {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c0 > :last-child {
  border-top-right-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 60px;
  height: 52px;
  background-color: #FFCA00;
}

<ThemeProvider
  theme={
    Object {
      "azure": "#3558A8",
      "bigStone": "#152343",
      "biscay": "#153A62",
      "black": "#000",
      "blackAlpha05": "rgba(0,0,0,0.05)",
      "blackAlpha75": "rgba(0,0,0,0.75)",
      "blueWood": "#27324B",
      "cerulean": "#10ADE4",
      "gold": "#FFCA00",
      "gray0": "#F8F8F8",
      "gray1": "#EEF2F5",
      "gray2": "#CCC",
      "gray3": "#999B9E",
      "gray4": "#757679",
      "gray5": "#545456",
      "gray6": "#383838",
      "gray7": "#040d25",
      "orient": "#004A7C",
      "powderBlue": "#B2D5E5",
      "transparent": "rgba(0, 0, 0, 0)",
      "white": "#FFF",
      "whiteAlpha10": "rgba(255,255,255,0.1)",
      "whiteAlpha75": "rgba(255,255,255,0.75)",
    }
  }
>
  <SearchBar
    borderColor="white"
  >
    <styled.div>
      <div
        className="c0"
      >
        <Input
          backgroundColor="gray1"
          borderColor="white"
          color="gray7"
          disabled={false}
          type="text"
          width="100%"
        >
          <styled.input
            backgroundColor="gray1"
            borderColor="white"
            color="gray7"
            disabled={false}
            type="text"
            width="100%"
          >
            <input
              className="c1"
              color="gray7"
              disabled={false}
              type="text"
              width="100%"
            />
          </styled.input>
        </Input>
        <styled.div>
          <div
            className="c2"
          >
            <Icon
              color="gray5"
              name="search-filled"
              selectable={true}
              size="20px"
              weight={400}
            >
              <styled.span
                code="\\\\e92d"
                color="gray5"
                selectable={true}
                size="20px"
                weight={400}
              >
                <span
                  className="c3"
                  color="gray5"
                  size="20px"
                />
              </styled.span>
            </Icon>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </SearchBar>
</ThemeProvider>
`;

exports[`SearchBar should render correctly with borderColor 1`] = `
.c1 {
  display: block;
  width: 100%;
  height: 52px;
  padding: 0 20px;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 18px;
  color: #040d25;
  border-width: 1px;
  border-color: gold;
  border-style: solid;
  border-radius: 0.5rem;
  background-color: #EEF2F5;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c1:disabled {
  color: #757679;
  background: #EEF2F5;
  cursor: not-allowed;
}

.c3 {
  height: 20px;
  font-weight: 400;
  font-size: 20px;
  color: #545456;
  cursor: pointer;
}

.c3:hover {
  color: #6d6d70;
}

.c3::before {
  font-family: 'icomoon';
  content: '\\e92d';
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c0 > :first-child {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c0 > :last-child {
  border-top-right-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 60px;
  height: 52px;
  background-color: #FFCA00;
}

<ThemeProvider
  theme={
    Object {
      "azure": "#3558A8",
      "bigStone": "#152343",
      "biscay": "#153A62",
      "black": "#000",
      "blackAlpha05": "rgba(0,0,0,0.05)",
      "blackAlpha75": "rgba(0,0,0,0.75)",
      "blueWood": "#27324B",
      "cerulean": "#10ADE4",
      "gold": "#FFCA00",
      "gray0": "#F8F8F8",
      "gray1": "#EEF2F5",
      "gray2": "#CCC",
      "gray3": "#999B9E",
      "gray4": "#757679",
      "gray5": "#545456",
      "gray6": "#383838",
      "gray7": "#040d25",
      "orient": "#004A7C",
      "powderBlue": "#B2D5E5",
      "transparent": "rgba(0, 0, 0, 0)",
      "white": "#FFF",
      "whiteAlpha10": "rgba(255,255,255,0.1)",
      "whiteAlpha75": "rgba(255,255,255,0.75)",
    }
  }
>
  <SearchBar
    borderColor="gold"
  >
    <styled.div>
      <div
        className="c0"
      >
        <Input
          backgroundColor="gray1"
          borderColor="gold"
          color="gray7"
          disabled={false}
          type="text"
          width="100%"
        >
          <styled.input
            backgroundColor="gray1"
            borderColor="gold"
            color="gray7"
            disabled={false}
            type="text"
            width="100%"
          >
            <input
              className="c1"
              color="gray7"
              disabled={false}
              type="text"
              width="100%"
            />
          </styled.input>
        </Input>
        <styled.div>
          <div
            className="c2"
          >
            <Icon
              color="gray5"
              name="search-filled"
              selectable={true}
              size="20px"
              weight={400}
            >
              <styled.span
                code="\\\\e92d"
                color="gray5"
                selectable={true}
                size="20px"
                weight={400}
              >
                <span
                  className="c3"
                  color="gray5"
                  size="20px"
                />
              </styled.span>
            </Icon>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </SearchBar>
</ThemeProvider>
`;

exports[`SearchBar should render correctly with onChange 1`] = `
.c1 {
  display: block;
  width: 100%;
  height: 52px;
  padding: 0 20px;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 18px;
  color: #040d25;
  border-width: 1px;
  border-color: white;
  border-style: solid;
  border-radius: 0.5rem;
  background-color: #EEF2F5;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c1:disabled {
  color: #757679;
  background: #EEF2F5;
  cursor: not-allowed;
}

.c3 {
  height: 20px;
  font-weight: 400;
  font-size: 20px;
  color: #545456;
  cursor: pointer;
}

.c3:hover {
  color: #6d6d70;
}

.c3::before {
  font-family: 'icomoon';
  content: '\\e92d';
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c0 > :first-child {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c0 > :last-child {
  border-top-right-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 60px;
  height: 52px;
  background-color: #FFCA00;
}

<ThemeProvider
  theme={
    Object {
      "azure": "#3558A8",
      "bigStone": "#152343",
      "biscay": "#153A62",
      "black": "#000",
      "blackAlpha05": "rgba(0,0,0,0.05)",
      "blackAlpha75": "rgba(0,0,0,0.75)",
      "blueWood": "#27324B",
      "cerulean": "#10ADE4",
      "gold": "#FFCA00",
      "gray0": "#F8F8F8",
      "gray1": "#EEF2F5",
      "gray2": "#CCC",
      "gray3": "#999B9E",
      "gray4": "#757679",
      "gray5": "#545456",
      "gray6": "#383838",
      "gray7": "#040d25",
      "orient": "#004A7C",
      "powderBlue": "#B2D5E5",
      "transparent": "rgba(0, 0, 0, 0)",
      "white": "#FFF",
      "whiteAlpha10": "rgba(255,255,255,0.1)",
      "whiteAlpha75": "rgba(255,255,255,0.75)",
    }
  }
>
  <SearchBar
    borderColor="white"
    onChange={[MockFunction]}
  >
    <styled.div>
      <div
        className="c0"
      >
        <Input
          backgroundColor="gray1"
          borderColor="white"
          color="gray7"
          disabled={false}
          onChange={[MockFunction]}
          type="text"
          width="100%"
        >
          <styled.input
            backgroundColor="gray1"
            borderColor="white"
            color="gray7"
            disabled={false}
            onChange={[MockFunction]}
            type="text"
            width="100%"
          >
            <input
              className="c1"
              color="gray7"
              disabled={false}
              onChange={[MockFunction]}
              type="text"
              width="100%"
            />
          </styled.input>
        </Input>
        <styled.div>
          <div
            className="c2"
          >
            <Icon
              color="gray5"
              name="search-filled"
              selectable={true}
              size="20px"
              weight={400}
            >
              <styled.span
                code="\\\\e92d"
                color="gray5"
                selectable={true}
                size="20px"
                weight={400}
              >
                <span
                  className="c3"
                  color="gray5"
                  size="20px"
                />
              </styled.span>
            </Icon>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </SearchBar>
</ThemeProvider>
`;

exports[`SearchBar should render correctly with onClick 1`] = `
.c1 {
  display: block;
  width: 100%;
  height: 52px;
  padding: 0 20px;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 18px;
  color: #040d25;
  border-width: 1px;
  border-color: white;
  border-style: solid;
  border-radius: 0.5rem;
  background-color: #EEF2F5;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c1:disabled {
  color: #757679;
  background: #EEF2F5;
  cursor: not-allowed;
}

.c3 {
  height: 20px;
  font-weight: 400;
  font-size: 20px;
  color: #545456;
  cursor: pointer;
}

.c3:hover {
  color: #6d6d70;
}

.c3::before {
  font-family: 'icomoon';
  content: '\\e92d';
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c0 > :first-child {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c0 > :last-child {
  border-top-right-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 60px;
  height: 52px;
  background-color: #FFCA00;
}

<ThemeProvider
  theme={
    Object {
      "azure": "#3558A8",
      "bigStone": "#152343",
      "biscay": "#153A62",
      "black": "#000",
      "blackAlpha05": "rgba(0,0,0,0.05)",
      "blackAlpha75": "rgba(0,0,0,0.75)",
      "blueWood": "#27324B",
      "cerulean": "#10ADE4",
      "gold": "#FFCA00",
      "gray0": "#F8F8F8",
      "gray1": "#EEF2F5",
      "gray2": "#CCC",
      "gray3": "#999B9E",
      "gray4": "#757679",
      "gray5": "#545456",
      "gray6": "#383838",
      "gray7": "#040d25",
      "orient": "#004A7C",
      "powderBlue": "#B2D5E5",
      "transparent": "rgba(0, 0, 0, 0)",
      "white": "#FFF",
      "whiteAlpha10": "rgba(255,255,255,0.1)",
      "whiteAlpha75": "rgba(255,255,255,0.75)",
    }
  }
>
  <SearchBar
    borderColor="white"
    onClick={[MockFunction]}
  >
    <styled.div>
      <div
        className="c0"
      >
        <Input
          backgroundColor="gray1"
          borderColor="white"
          color="gray7"
          disabled={false}
          type="text"
          width="100%"
        >
          <styled.input
            backgroundColor="gray1"
            borderColor="white"
            color="gray7"
            disabled={false}
            type="text"
            width="100%"
          >
            <input
              className="c1"
              color="gray7"
              disabled={false}
              type="text"
              width="100%"
            />
          </styled.input>
        </Input>
        <styled.div>
          <div
            className="c2"
          >
            <Icon
              color="gray5"
              name="search-filled"
              onClick={[MockFunction]}
              selectable={true}
              size="20px"
              weight={400}
            >
              <styled.span
                code="\\\\e92d"
                color="gray5"
                onClick={[MockFunction]}
                selectable={true}
                size="20px"
                weight={400}
              >
                <span
                  className="c3"
                  color="gray5"
                  onClick={[MockFunction]}
                  size="20px"
                />
              </styled.span>
            </Icon>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </SearchBar>
</ThemeProvider>
`;

exports[`SearchBar should render correctly with value 1`] = `
.c1 {
  display: block;
  width: 100%;
  height: 52px;
  padding: 0 20px;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 18px;
  color: #040d25;
  border-width: 1px;
  border-color: white;
  border-style: solid;
  border-radius: 0.5rem;
  background-color: #EEF2F5;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c1:disabled {
  color: #757679;
  background: #EEF2F5;
  cursor: not-allowed;
}

.c3 {
  height: 20px;
  font-weight: 400;
  font-size: 20px;
  color: #545456;
  cursor: pointer;
}

.c3:hover {
  color: #6d6d70;
}

.c3::before {
  font-family: 'icomoon';
  content: '\\e92d';
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c0 > :first-child {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c0 > :last-child {
  border-top-right-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 60px;
  height: 52px;
  background-color: #FFCA00;
}

<ThemeProvider
  theme={
    Object {
      "azure": "#3558A8",
      "bigStone": "#152343",
      "biscay": "#153A62",
      "black": "#000",
      "blackAlpha05": "rgba(0,0,0,0.05)",
      "blackAlpha75": "rgba(0,0,0,0.75)",
      "blueWood": "#27324B",
      "cerulean": "#10ADE4",
      "gold": "#FFCA00",
      "gray0": "#F8F8F8",
      "gray1": "#EEF2F5",
      "gray2": "#CCC",
      "gray3": "#999B9E",
      "gray4": "#757679",
      "gray5": "#545456",
      "gray6": "#383838",
      "gray7": "#040d25",
      "orient": "#004A7C",
      "powderBlue": "#B2D5E5",
      "transparent": "rgba(0, 0, 0, 0)",
      "white": "#FFF",
      "whiteAlpha10": "rgba(255,255,255,0.1)",
      "whiteAlpha75": "rgba(255,255,255,0.75)",
    }
  }
>
  <SearchBar
    borderColor="white"
    onChange={[MockFunction]}
    value="My search"
  >
    <styled.div>
      <div
        className="c0"
      >
        <Input
          backgroundColor="gray1"
          borderColor="white"
          color="gray7"
          disabled={false}
          onChange={[MockFunction]}
          type="text"
          value="My search"
          width="100%"
        >
          <styled.input
            backgroundColor="gray1"
            borderColor="white"
            color="gray7"
            disabled={false}
            onChange={[MockFunction]}
            type="text"
            value="My search"
            width="100%"
          >
            <input
              className="c1"
              color="gray7"
              disabled={false}
              onChange={[MockFunction]}
              type="text"
              value="My search"
              width="100%"
            />
          </styled.input>
        </Input>
        <styled.div>
          <div
            className="c2"
          >
            <Icon
              color="gray5"
              name="search-filled"
              selectable={true}
              size="20px"
              weight={400}
            >
              <styled.span
                code="\\\\e92d"
                color="gray5"
                selectable={true}
                size="20px"
                weight={400}
              >
                <span
                  className="c3"
                  color="gray5"
                  size="20px"
                />
              </styled.span>
            </Icon>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </SearchBar>
</ThemeProvider>
`;
